--- a/template.html
+++ b/template.html
@@ -7,14 +7,17 @@
 html,body{
     height:297mm;
     width:210mm;
-    font-size: 14px;
+    font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6 {
   color: #444;
   margin: 0 0 10px;
+  font-size: 16px;
 }
-h3 {
-    font-weight: normal;
+
+th {
+    font-weight: bold;
+    font-size: 18px;
 }
 
 * {
@@ -69,6 +72,23 @@ h3 {
   margin-left: 5px;
 }
 
+.footer {
+  text-align: center;
+  text-align-last: center;
+  font-weight: bolder;
+}
+
+.footer > .beginning {
+  float: left;
+  margin-right: 5px;
+}
+
+.footer > .end {
+  float: right;
+  margin-left: 5px;
+}
+
+
 </style>
 </head>
 <body>
@@ -76,7 +96,7 @@ h3 {
 <div class="row">
 <div class="left_column" style="background-color:#aaa;">
 
-{{left}}
+{{Contact}}
 
 {{skills}}
 
